--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="appBar">
-            <img src="assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
+            <img src="./assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
             <nav class="appBar_nav">
                 <a href="index.html" class="appBar_nav-item">Accueil</a>
                 <a href="menu.html" class="appBar_nav-item">Menu</a>
@@ -42,7 +42,7 @@
 
             <div class="menu_card">
 
-                <img src="assets/Logo.svg" class="menu_icon" alt="Logo Yummy Nouilles">
+                <img src="./assets/Logo.svg" class="menu_icon" alt="Logo Yummy Nouilles">
 
                 <!--==================== ENTREES ====================-->
                 <div class="menu_part">
@@ -135,15 +135,15 @@
         <footer class="footer">
 
             <a href="https://www.instagram.com/yummy_nouilles" class="footer_icon">
-                <img src="assets/img/icons/instagram.svg" alt="Logo Instagram">
+                <img src="./assets/img/icons/instagram.svg" alt="Logo Instagram">
             </a>
 
             <a href="https://www.facebook.com/yummy_nouilles" class="footer_icon">
-                <img src="assets/img/icons/facebook.svg" alt="Logo Facebook">
+                <img src="./assets/img/icons/facebook.svg" alt="Logo Facebook">
             </a>
 
             <a href="https://www.google.com/search?q=yummy+nouilles" class="footer_icon">
-                <img src="assets/img/icons/maps.svg" alt="Logo Google Maps">
+                <img src="./assets/img/icons/maps.svg" alt="Logo Google Maps">
             </a>
 
         </footer>
