--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
         <!--==================== HEADER ====================-->
         <header class="appBar">
-            <img src="assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
+            <img src="./assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
             <nav class="appBar_nav">
                 <a href="index.html" class="appBar_nav-item">Accueil</a>
                 <a href="menu.html" class="appBar_nav-item">Menu</a>
@@ -86,15 +86,15 @@
         <footer class="footer">
 
             <a href="https://www.instagram.com/yummy_nouilles" class="footer_icon">
-                <img src="assets/img/icons/instagram.svg" alt="Logo Instagram">
+                <img src="./assets/img/icons/instagram.svg" alt="Logo Instagram">
             </a>
 
             <a href="https://www.facebook.com/yummy_nouilles" class="footer_icon">
-                <img src="assets/img/icons/facebook.svg" alt="Logo Facebook">
+                <img src="./assets/img/icons/facebook.svg" alt="Logo Facebook">
             </a>
 
             <a href="https://www.google.com/search?q=yummy+nouilles" class="footer_icon">
-                <img src="assets/img/icons/maps.svg" alt="Logo Google Maps">
+                <img src="./assets/img/icons/maps.svg" alt="Logo Google Maps">
             </a>
             
         </footer>
