--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <!--==================== HEADER ====================-->
         <header class="appBar">
-            <img src="./assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
+            <img src="assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
             <nav class="appBar_nav">
                 <a href="index.html" class="appBar_nav-item">Accueil</a>
                 <a href="menu.html" class="appBar_nav-item">Menu</a>
