--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
         <!--==================== HEADER ====================-->
         <header class="appBar">
-            <img src="./assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
+            <img src="assets/Logo.svg" class="appBar_icon" alt="Logo Yummy Nouilles">
             <nav class="appBar_nav">
                 <a href="index.html" class="appBar_nav-item">Accueil</a>
                 <a href="menu.html" class="appBar_nav-item">Menu</a>
