--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 </div>
 
-                <img src="./assets/Logo.svg" class="hero_icon" alt="Logo Yummy Nouilles">
+                <img src="assets/Logo.svg" class="hero_icon" alt="Logo Yummy Nouilles">
 
             </section>
 
